--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -47,6 +47,7 @@
         app:layout_constraintBottom_toBottomOf="parent">
         <Button
             android:id="@+id/deleteBtn"
+            android:onClick="onClick"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
@@ -59,6 +60,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/editbtn"
+            android:onClick="onClick"
             app:layout_constraintBottom_toTopOf="@+id/deleteBtn"
             android:text="Edit"/>
 
