--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -22,6 +22,9 @@
             <item android:id="@+id/nav_favorite"
                 android:icon="@drawable/ic_menu_send"
                 android:title="Favorite Celebrity"/>
+            <item android:id="@+id/add_celeb"
+                android:icon="@drawable/ic_plus_one_black_24dp"
+                android:title="Add Celeb to Database"/>
         </menu>
     </item>
 
